--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,8 +44,8 @@
 			{% include socials.html %}
 
 			<div class="footer__copyright">
-				<span>© {{ 'now' | date: "%Y" }} {{ site.data.settings.basic_settings.site_title }}</span>
-				<a href="https://nicool.one" target="_blank">nicole rodriguez</a>
+				<span>© {{ 'now' | date: "%Y" }} nicole rodriguez - </span>
+				<a href="https://nicool.one" target="_blank">nicool</a>
 			</div>
 
 		</div>
