--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,8 @@
 	{% include socials.html %}
 
 	<div class="footer__copyright">
-		<span>© {{ 'now' | date: "%Y" }} {{ site.data.settings.basic_settings.site_title }}</span>
-		<a href="https://nicool.one" target="_blank">nicole rodriguez</a>
+		<span>© {{ 'now' | date: "%Y" }} nicole rodriguez - </span>
+		<a href="https://nicool.one" target="_blank">nicool</a>
 	</div>
 
 </footer>
