--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 	{% include socials.html %}
 
 	<div class="footer__copyright">
-		<span>© {{ 'now' | date: "%Y" }} nicole rodriguez - </span>
+		<span>© {{ 'now' | date: "%Y" }} nicole rodriguez</span>
 		<a href="https://nicool.one" target="_blank">nicool</a>
 	</div>
 
