--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@ layout: default
 
 	<div class="wrap">
 
-		<h1>{{ page.page_title if page.title == "About" else page.title }}</h1>
+		<h1>{{ page.page_title if page.title == "About" else page.title | default: page.title }}</h1>
 		<p>{{ page.subtitle }}</p>
 
 	</div>
